# BrewTroller-Official

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Config.h  Makefile  README.md  avr_toolchain.cmake  build-all-test.sh  cmake_install.cmake  coverity-build.sh  json2mako.py  options.json  test-build-all.sh
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/OneWire/: OneWire.cpp
lib/PID_Beta6/: .PID_Beta6.h.kate-swp  PID_Beta6.cpp  PID_Beta6.h
lib/Wire/: Wire.h
lib/ds2482/: DS2482.cpp  DS2482.h
lib/encoder/: encoder.cpp  encoder.h
lib/fastpin/: pin.cpp  pin.h
lib/liquidcrystalfp/: LiquidCrystalFP.cpp  LiquidCrystalFP.h
lib/menu/: menu.cpp  menu.h
lib/modbusmaster/: ModbusMaster.cpp  ModbusMaster.h
src/: BrewCore.cpp  BrewCore.h  BrewTroller-OT_DX1_RIMSDF.elf  BrewTroller-OT_DX1_RIMSDF.hex  BrewTroller-OT_DX1_RIMSDF.map  BrewTroller-OT_DX1_STEAMPWM.elf  BrewTroller-OT_DX1_STEAMPWM.hex  BrewTroller-OT_DX1_STEAMPWM.map  BrewTroller.cpp  BrewTroller.h  CMakeLists.txt  Com.cpp  Com.h  Com_BTPD.cpp  Com_BTPD.h  Com_BTnic.h  Com_RGBIO8.cpp  Com_RGBIO8.h  Com_S0ASC.cpp  Config.h  Config.in.h  ConfigManager.cpp  ConfigManager.hpp  EEPROM-old.cpp  EEPROM-old.h  EEPROM.cpp  EEPROM.h  EEPROM.hpp  Enum.h  Events.cpp  Events.h  FlowController.cpp  FlowController.h  HardwareProfile.h  Makefile  Outputs.cpp  Outputs.h  PVOut.cpp  PVOut.h  RGBIO_Map.in.hpp  (+19 more)
src/HWProfiles/BrewTroller 1.0 - 2.1/: HWProfile.h
src/HWProfiles/BrewTroller 2.2 - 2.4/: HWProfile.h
src/HWProfiles/BrewTroller 3.x/: HWProfile.h
src/HWProfiles/BrewTroller 4.0 Pro/: HWProfile.h
src/HWProfiles/BrewTroller Phoenix/HERMS/: HWProfile.h
src/HWProfiles/BrewTroller Phoenix/RIMS or Direct Fired/: HWProfile.h
src/HWProfiles/BrewTroller Phoenix/Single Vessel/: HWProfile.h
src/HWProfiles/BrewTroller Phoenix/Steam or PWM Pump/: HWProfile.h
src/HWProfiles/OpenTroller BX1/HERMS/: HWProfile.h
src/HWProfiles/OpenTroller BX1/HERMS I2CLCD/: HWProfile.h
src/HWProfiles/OpenTroller BX1/RIMS or Direct Fired/: HWProfile.h
src/HWProfiles/OpenTroller BX1/RIMS or Direct Fired I2CLCD/: HWProfile.h
src/HWProfiles/OpenTroller BX1/Single Vessel/: HWProfile.h
src/HWProfiles/OpenTroller BX1/Steam or PWM Pump/: HWProfile.h
src/HWProfiles/OpenTroller BX1/Steam or PWM Pump I2CLCD/: HWProfile.h
src/HWProfiles/OpenTroller DX1/HERMS/: HWProfile.h
src/HWProfiles/OpenTroller DX1/RIMS or Direct Fired/: HWProfile.h
src/HWProfiles/OpenTroller DX1/Single Vessel/: HWProfile.h
src/HWProfiles/OpenTroller DX1/Steam or PWM Pump/: HWProfile.h
src/HWProfiles/OpenTroller EX1/HERMS/: HWProfile.h
src/HWProfiles/OpenTroller EX1/RIMS or Direct Fired/: HWProfile.h
src/HWProfiles/OpenTroller EX1/Single Vessel/: HWProfile.h
src/HWProfiles/OpenTroller EX1/Steam or PWM Pump/: HWProfile.h
templates/: rgbio.template
test/: rgbio.json
tests/: CMakeLists.txt
tests/dummy_avr/avr/: eeprom.h
tests/dummy_avr/src/: eeprom.cpp
tests/src/: Config.h  EEPROMTests.cpp  globals.cpp  main.cpp
